<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/settings"
        android:title="@string/title_settings" />
    <item
        android:id="@+id/sub_setting"
        android:title="@string/title_sub_setting" />
    <item
        android:id="@+id/sub_update"
        android:title="@string/title_sub_update" />
    <item
        android:id="@+id/real_ping_all"
        android:title="@string/title_real_ping_all_server" />
    <item
        android:id="@+id/service_restart"
        android:title="@string/title_service_restart" />
    <item
        android:id="@+id/export_all"
        android:title="@string/title_export_all" />
    <item
        android:id="@+id/sort_by_test_results"
        android:title="@string/title_sort_by_test_results" />
    <item
        android:id="@+id/locate_selected_config"
        android:title="@string/title_locate_selected_config" />
    <item
        android:id="@+id/del_all_config"
        android:title="@string/title_del_all_config" />
    <item
        android:id="@+id/del_duplicate_config"
        android:title="@string/title_del_duplicate_config" />
    <item
        android:id="@+id/del_invalid_config"
        android:title="@string/title_del_invalid_config" />
    <item
        android:id="@+id/per_app_proxy_settings"
        android:title="@string/per_app_proxy_settings" />
    <item
        android:id="@+id/routing_setting"
        android:title="@string/routing_settings_title" />
    <item
        android:id="@+id/user_asset_setting"
        android:title="@string/title_user_asset_setting" />
    <item
        android:id="@+id/logcat"
        android:title="@string/title_logcat" />
    <item
        android:id="@+id/check_for_update"
        android:title="@string/update_check_for_update" />
    <item
        android:id="@+id/backup_restore"
        android:title="@string/title_configuration_backup_restore" />
    <item
        android:id="@+id/promotion"
        android:title="@string/title_pref_promotion" />
    <item
        android:id="@+id/about"
        android:title="@string/title_about" />
</menu>
